force-app/main/default/objects/HSUInsurance__c/fields/AmountPaidInsurance__c.field-meta.xml
<CustomField>
    <fullName>AmountPaidInsurance__c</fullName>
    <label>AMOUNT PAID-INSURANCE(LOCAL)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>