force-app/main/default/objects/HSUInsurance__c/fields/BankAccountInsurance__c.field-meta.xml
<CustomField>
    <fullName>BankAccountInsurance__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BANK ACCOUNT FOR INSURANCE</label>
    <referenceTo>BankAccount__c</referenceTo>
    <relationshipName>BANK_ACCOUNT_INSURANCE</relationshipName>
    <type>Lookup</type>
</CustomField>