force-app/main/default/objects/HSUInsurance__c/fields/BeneficiaryInsurance__c.field-meta.xml
<CustomField>
    <fullName>BeneficiaryInsurance__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BENEFICIARY-INSURANCE</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>BENEFICIARY_INSURANCE</relationshipName>
    <type>Lookup</type>
</CustomField>