force-app/main/default/objects/HSUInsurance__c/fields/HealthInsuranceByEmployee__c.field-meta.xml
<CustomField>
    <fullName>HealthInsuranceByEmployee__c</fullName>
    <formula>SalaryToContributeSocialInsurance__c*  PayrollSlip__r.EmployeeID__r.CloHRMStandard__r.HealthInsuranceRatioByEmployee__c</formula>
    <inlineHelpText>Health insurance by employee=Salary to contribute social insurance*health insurance ratio by employee in HR policy.</inlineHelpText>
    <label>HEALTH INSURANCE BY EMPLOYEE</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>