force-app/main/default/objects/HSUInsurance__c/fields/HealthInsuranceByEmployer__c.field-meta.xml
<CustomField>
    <fullName>HealthInsuranceByEmployer__c</fullName>
    <formula>SalaryToContributeSocialInsurance__c *  PayrollSlip__r.EmployeeID__r.CloHRMStandard__r.HealthInsuranceRatioByEmployer__c</formula>
    <inlineHelpText>Health insurance by employer=Salary to contribute social insurance*health insurance ratio by employer in HR policy.</inlineHelpText>
    <label>HEALTH INSURANCE BY EMPLOYER</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>