force-app/main/default/objects/HSUInsurance__c/fields/HSUInsuranceBankTransactionCode__c.field-meta.xml
<CustomField>
    <fullName>HSUInsuranceBankTransactionCode__c</fullName>
    <inlineHelpText>Input Bank Transaction Code from Bank Slip</inlineHelpText>
    <label>H/S/U INSURANCE BANK TRANSACTION CODE</label>
    <length>50</length>
    <type>Text</type>
</CustomField>