force-app/main/default/objects/HSUInsurance__c/fields/HSUInsuranceByEmployee__c.field-meta.xml
<CustomField>
    <fullName>HSUInsuranceByEmployee__c</fullName>
    <formula>SalaryToContributeSocialInsurance__c *  PayrollSlip__r.EmployeeID__r.CloHRMStandard__r.HSUInsuranceRatioByEmployee__c</formula>
    <inlineHelpText>H/S/UNEM Insurance by Employee=Salary to Contribute Social Insurance*H/S/UNEM Insurance Ratio by Employee in HR Policy.</inlineHelpText>
    <label>H/S/UNEM INSURANCE BY EMPLOYEE</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>