force-app/main/default/objects/HSUInsurance__c/fields/HSUInsuranceByEmployer__c.field-meta.xml
<CustomField>
    <fullName>HSUInsuranceByEmployer__c</fullName>
    <formula>SalaryToContributeSocialInsurance__c *   PayrollSlip__r.EmployeeID__r.CloHRMStandard__r.HSUInsuranceRatioByEmployer__c</formula>
    <inlineHelpText>H/S/UNEM Insurance by Employer=Salary to Contribute Social Insurance*H/S/UNEM Insurance Ratio by Employer in HR Policy.</inlineHelpText>
    <label>H/S/UNEM INSURANCE BY EMPLOYER</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>