force-app/main/default/objects/HSUInsurance__c/fields/HSUInsuranceRatioByEmployee_r__c.field-meta.xml
<CustomField>
    <fullName>HSUInsuranceRatioByEmployee_r__c</fullName>
    <formula>SalaryToContributeSocialInsurance__c  *  PayrollSlip__r.EmployeeID__r.CloHRMStandard__r.HSUInsuranceRatioByEmployee_r__c</formula>
    <inlineHelpText>H/S/UNEM Insurance by Employee/er=Salary to Contribute Social Insurance*H/S/UNEM Insurance Ratio by Employee/er in HR Policy.</inlineHelpText>
    <label>H/S/UNEM INSURANCE BY EMPLOYEE/ER</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>