force-app/main/default/objects/HSUInsurance__c/fields/InsuranceDebitAccuntingCode__c.field-meta.xml
<CustomField>
    <fullName>InsuranceDebitAccuntingCode__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>INSURANCE DEBIT ACCOUNTING CODE</label>
    <referenceTo>Accounting_Code__c</referenceTo>
    <relationshipName>INSURANCE_DEBIT</relationshipName>
    <type>Lookup</type>
</CustomField>