force-app/main/default/objects/HSUInsurance__c/fields/InsurancePaid__c.field-meta.xml
<CustomField>
    <fullName>InsurancePaid__c</fullName>
    <defaultValue>false</defaultValue>
    <label>INSURANCE PAID?</label>
    <type>Checkbox</type>
</CustomField>