force-app/main/default/objects/HSUInsurance__c/fields/PayPeriodEndDate__c.field-meta.xml
<CustomField>
    <fullName>PayPeriodEndDate__c</fullName>
    <label>PAY PERIOD END DATE</label>
    <type>Date</type>
</CustomField>