force-app/main/default/objects/HSUInsurance__c/fields/PayrollOrder__c.field-meta.xml
<CustomField>
    <fullName>PayrollOrder__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PAYROLL ORDER</label>
    <referenceTo>PayrollOrder__c</referenceTo>
    <relationshipName>H_S_UNEM_INSURANCE</relationshipName>
    <type>Lookup</type>
</CustomField>