force-app/main/default/objects/HSUInsurance__c/fields/PayrollSlip__c.field-meta.xml
<CustomField>
    <fullName>PayrollSlip__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PAYROLL SLIP</label>
    <referenceTo>PayrollSlip__c</referenceTo>
    <relationshipName>H_S_UNEM_INSURANCE</relationshipName>
    <type>Lookup</type>
</CustomField>