force-app/main/default/objects/HSUInsurance__c/fields/ResourceID__c.field-meta.xml
<CustomField>
    <fullName>ResourceID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>RESOURCES ID</label>
    <referenceTo>resource__c</referenceTo>
    <relationshipName>H_S_U_INSURANCE</relationshipName>
    <type>Lookup</type>
</CustomField>