force-app/main/default/objects/HSUInsurance__c/fields/SalaryToContributeSocialInsurance__c.field-meta.xml
<CustomField>
    <fullName>SalaryToContributeSocialInsurance__c</fullName>
    <formula>PayrollSlip__r.SalaryToContributeSocialInsurance__c</formula>
    <inlineHelpText>Synchronize from Salary to Contribute Social Insurance in Payroll Slip</inlineHelpText>
    <label>SALARY TO CONTRIBUTE SOCIAL INSURANCE</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>