force-app/main/default/objects/HSUInsurance__c/fields/SocialInsuByEmployeeDebitAC__c.field-meta.xml
<CustomField>
    <fullName>SocialInsuByEmployeeDebitAC__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SOCIAL INSU BY EMPLOYEE DEBIT A/C</label>
    <referenceTo>Accounting_Code__c</referenceTo>
    <relationshipLabel>H/S/U INSURANCE (SOCIAL INSU BY EMPLOYEE DEBIT A/C)</relationshipLabel>
    <relationshipName>SocialInsuByEmployeeDebitAC</relationshipName>
    <type>Lookup</type>
</CustomField>