force-app/main/default/objects/HSUInsurance__c/fields/SocialInsuByEmployerDebitAC__c.field-meta.xml
<CustomField>
    <fullName>SocialInsuByEmployerDebitAC__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SOCIAL INSU BY EMPLOYER DEBIT A/C</label>
    <referenceTo>Accounting_Code__c</referenceTo>
    <relationshipLabel>H/S/U INSURANCE (SOCIAL INSU BY EMPLOYER DEBIT A/C)</relationshipLabel>
    <relationshipName>SocialInsuByEmployerDebitAC</relationshipName>
    <type>Lookup</type>
</CustomField>