force-app/main/default/objects/HSUInsurance__c/fields/UnemployInsuByEmployeeCreditAC__c.field-meta.xml
<CustomField>
    <fullName>UnemployInsuByEmployeeCreditAC__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>UNEMPLOYMENT INSU BY EMPLOYEE CREDIT A/C</label>
    <referenceTo>Accounting_Code__c</referenceTo>
    <relationshipLabel>H/S/U INSURANCE (UNEMPLOYMENT INSU BY EMPLOYEE CREDIT A/C)</relationshipLabel>
    <relationshipName>UnemployInsuByEmployeeCreditAC</relationshipName>
    <type>Lookup</type>
</CustomField>