force-app/main/default/objects/HSUInsurance__c/fields/UnemployInsuByEmployerCreditAC__c.field-meta.xml
<CustomField>
    <fullName>UnemployInsuByEmployerCreditAC__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>UNEMPLOYMENT INSU BY EMPLOYER CREDIT A/C</label>
    <referenceTo>Accounting_Code__c</referenceTo>
    <relationshipLabel>H/S/U INSURANCE (UNEMPLOYMENT INSU BY EMPLOYER CREDIT A/C)</relationshipLabel>
    <relationshipName>UnemployInsuByEmployer</relationshipName>
    <type>Lookup</type>
</CustomField>