force-app/main/default/objects/HSUInsurance__c/fields/UnemploymentFundByEmployer__c.field-meta.xml
<CustomField>
    <fullName>UnemploymentFundByEmployer__c</fullName>
    <formula>SalaryToContributeSocialInsurance__c *  PayrollSlip__r.EmployeeID__r.CloHRMStandard__r.UnemploymentFundRatioByEmployer__c</formula>
    <inlineHelpText>Unemployment fund by employer=Salary to contribute social insurance*unemployment fund ratio by employer in HR policy.</inlineHelpText>
    <label>UNEMPLOYMENT FUND BY EMPLOYER</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>