force-app/main/default/objects/HSUInsurance__c/fields/UnpaidBalanceInsurance__c.field-meta.xml
<CustomField>
    <fullName>UnpaidBalanceInsurance__c</fullName>
    <formula>HSUInsuranceRatioByEmployee_r__c  -  AmountPaidInsurance__c</formula>
    <label>UNPAID BALANCE OF INSURANCE(LOCAL)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>