force-app/main/default/objects/HSUInsurance__c/validationRules/EMPLOYEE_ID_CHECK.validationRule-meta.xml
<ValidationRule>
    <fullName>EMPLOYEE_ID_CHECK</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK( EmployeeID__c )</errorConditionFormula>
    <errorDisplayField>EmployeeID__c</errorDisplayField>
    <errorMessage>EMPLOYEE ID is required to manage Employee information in CloHRM. 
Please choose EMPLOYEE ID which the employee is using. If there is no EMPLOYEE ID , please register EMPLOYEE ID or contact AFR Sales Representative for purchasing CloSCM Licenses.</errorMessage>
</ValidationRule>