force-app/main/default/objects/HSUInsurance__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>PayrollOrder__c</columns>
    <columns>PayrollSlip__c</columns>
    <columns>PayPeriodStartDate__c</columns>
    <columns>PayPeriodEndDate__c</columns>
    <columns>SalaryToContributeSocialInsurance__c</columns>
    <columns>HSUInsuranceByEmployee__c</columns>
    <columns>HSUInsuranceByEmployer__c</columns>
    <columns>HSUInsuranceRatioByEmployee_r__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
    <sharedTo>
        <role>HRManager</role>
        <role>HRStaff</role>
    </sharedTo>
</ListView>